frontend/app/components/footer.module.scss
.footer {
  border-top: 1px solid var(--black);

  h6 {
    margin: 1rem 0 0 0;

    a {
      display: inline-block;
      margin-bottom: 0.125rem;
    }
  }

  svg {
    margin-top: 2rem;

    @media screen and (max-width: 800px) {
      max-width: 16rem;
      display: block;
      margin: 3rem auto;
    }
  }

  img {
    max-width: 16rem;
    margin: 0 auto;
  }
}

.inner {
  position: relative;
  z-index: 1;

  @media screen and (max-width: 800px) {
    display: flex;
    flex-direction: column-reverse;
    gap: 0;
  }

  > div:first-child {
    p {
      margin: 0;
      font-size: 0.75rem;
      text-wrap: pretty;
      line-height: 1.4em;
    }
  }

  > div:nth-child(2) {
    p {
      margin: 0.25rem 0;
    }
  }

  > div,
  > div:nth-child(odd),
  > div:nth-child(even) {
    padding: 3rem;
    padding-bottom: 10rem;
    &:first-child {
      border-right: 1px solid var(--black);
      @media screen and (max-width: 800px) {
        border-right: none;
        padding: 3rem 1rem 5rem;
      }
    }

    &:nth-child(2) {
      @media screen and (max-width: 800px) {
        padding: 0;
      }
    }
  }
}

